--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: CYBerATtacK
 subtitle: cyber security related things
-description: you know
+description: coder & cyber security related things
 author: YANG XU
 language: en
 timezone:
