--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -509,11 +509,9 @@ vendors:
   # https://github.com/hustcc/canvas-nest.js
   canvas_nest:
 
-donate: 
-  enable: true
-  text: money for food... 
-  alipay: 
-  wechat:
+#reward_comment: money for food...
+#wechatpay: /path/to/wechat-reward-image
+#alipay: /path/to/alipay-reward-image
 
 # Assets
 css: css
