--- a/themes.next._config.yml.IN
+++ b/themes.next._config.yml.IN
@@ -196,11 +196,11 @@ sidebar:
 
 
 # Blog rolls
-#links_title: Links
 #links_layout: block
 #links_layout: inline
-#links:
-#  Title: http://example.com/
+links_title: Friends Links
+links:
+  0x00 RootKiter | Reverse Engineer/Botnet: http://rootkiter.com/
 
 
 # ---------------------------------------------------------------
