--- a/themes.next._config.yml.IN
+++ b/themes.next._config.yml.IN
@@ -94,19 +94,21 @@ font:
     # external: true will load this font family from host.
     external: true
     #family: Lato
-    family: swald
+    #family: swald
+    family: Oswald
 
   # Font settings for Headlines (h1, h2, h3, h4, h5, h6)
   # Fallback to `global` font settings.
   headings:
     external: true
-    family: Roboto+Condens
+    #family: Roboto+Condens
+    family: Kelly+Slab
 
   # Font settings for posts
   # Fallback to `global` font settings.
   posts:
     external: true
-    family:
+    family: Kelly+Slab
 
   # Font settings for Logo
   # Fallback to `global` font settings.
@@ -119,7 +121,8 @@ font:
   # Font settings for <code> and code blocks.
   codes:
     external: true
-    family: Source+Code+Pro
+    #family: Source+Code+Pro
+    family: Share+Tech+Mono
     size:
 
 
