--- a/themes.next._config.yml.IN
+++ b/themes.next._config.yml.IN
@@ -290,7 +290,7 @@ mathjax:
 #disqus_shortname: cybatk-com
 
 # Hypercomments
-#hypercomments_id:
+hypercomments_id: 93402
 
 # Gentie productKey
 #gentie_productKey:
